Fixing weird spacing issues

--- a/client/global/styles/utils/_fonts.scss
+++ b/client/global/styles/utils/_fonts.scss
@@ -18,7 +18,7 @@ $content-font: Spinnaker, 'sans-serif';
   }
 }
 
-p, label, article, aside, a, li, button, option, span{
+p, label, article, aside, a, li, button, span, input{
   font-family: $content-font;
   font-weight:300;
 }
